--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Multi-Platform Executables
+name: Build Windows Executable
 
 on:
   push:
@@ -33,100 +33,11 @@ jobs:
           name: InventoryManagement-Windows
           path: dist/InventoryManagement.exe
           retention-days: 30
-
-  build-linux:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-      
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-tk
-      
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller python-barcode qrcode pillow openpyxl
-      
-      - name: Build Linux executable
-        run: pyinstaller build_linux.spec --clean
-      
-      - name: Upload Linux executable
-        uses: actions/upload-artifact@v4
-        with:
-          name: InventoryManagement-Linux
-          path: dist/InventoryManagement
-          retention-days: 30
-      
-      - name: Build .deb package
-        run: |
-          chmod +x build_deb.sh
-          ./build_deb.sh
-      
-      - name: Upload .deb package
-        uses: actions/upload-artifact@v4
-        with:
-          name: InventoryManagement-DEB
-          path: inventory-management_1.0.0_amd64.deb
-          retention-days: 30
-
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller python-barcode qrcode pillow openpyxl
-      
-      - name: Build macOS application
-        run: pyinstaller build_macos.spec --clean
-      
-      - name: Create DMG installer
-        run: |
-          chmod +x build_macos_dmg.sh
-          ./build_macos_dmg.sh
-      
-      - name: Upload macOS DMG
-        uses: actions/upload-artifact@v4
-        with:
-          name: InventoryManagement-macOS
-          path: InventoryManagement-1.0.0.dmg
-          retention-days: 30
-
-  create-release:
-    needs: [build-windows, build-linux, build-macos]
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-      
-      - name: Display structure
-        run: ls -R
       
       - name: Create Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: |
-            InventoryManagement-Windows/InventoryManagement.exe
-            InventoryManagement-Linux/InventoryManagement
-            InventoryManagement-DEB/inventory-management_1.0.0_amd64.deb
-            InventoryManagement-macOS/InventoryManagement-1.0.0.dmg
+          files: dist/InventoryManagement.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
